Fixes video background sizing on smaller devices

--- a/theme/static/scss/_frontpage.scss
+++ b/theme/static/scss/_frontpage.scss
@@ -27,16 +27,6 @@ body.frontpage {
 
     .hero {
         padding: 5rem 0 3rem 0;
-
-        &.has-video {
-            height: 100vh;
-
-            @include media-breakpoint-up('tablet') {
-                &.has-video {
-                    height: 75vh;
-                }
-            }
-        }
     }
 
     .features-cell {
